@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3208 2019/07/31 20:48:51 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3209 2019/07/31 20:50:07 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5165,3 +5165,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated print/R-knitr to 1.23 [brook 2019-07-31]
 	Updated security/R-digest to 0.6.20 [brook 2019-07-31]
 	Updated textproc/R-formatR to 1.7 [brook 2019-07-31]
+	Updated textproc/R-gsubfn to 0.7 [brook 2019-07-31]
